# ColAndreas

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: ColAndreasDatabaseReader.cpp  ColAndreasDatabaseReader.h  ColObject.cpp  ColObject.h  DynamicWorld.cpp  dffread.cpp
tests/: CMakeLists.txt  stubs.cpp  test_dbreader.cpp  test_math.cpp  test_modelref.cpp  test_removedbuilding.cpp
